--- a/Quiz_17/Quiz_17/Base.lproj/Main.storyboard
+++ b/Quiz_17/Quiz_17/Base.lproj/Main.storyboard
@@ -109,13 +109,21 @@
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6td-Yh-qJb">
                                 <rect key="frame" x="0.0" y="104" width="390" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="fYd-uw-RQ0" id="MrU-EJ-fHl"/>
+                                </connections>
                             </pickerView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Rt-rd-FIh">
+                                <rect key="frame" x="52" y="326" width="286" height="193"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="bYm-tW-67a"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" title="Add View" id="ZcP-3N-9NH"/>
                     <connections>
+                        <outlet property="imgView" destination="9Rt-rd-FIh" id="yhZ-Ho-Z4N"/>
                         <outlet property="pickerImage" destination="6td-Yh-qJb" id="q8i-M7-lu2"/>
                         <outlet property="txtCellName" destination="BHB-cB-eCB" id="6XP-b3-G5w"/>
                     </connections>
